--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,11 @@
         "psr-4": {
             "App\\": "App/"
         }
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
 }
