--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "easyswoole/easyswoole": "3.x",
+        "easyswoole/easyswoole": "^3.3",
         "easyswoole/mysqli": "^2.0",
         "easyswoole/swoole-ide-helper": "^1.3",
         "easyswoole/phpunit": "^1.0",
@@ -11,12 +11,15 @@
         "easyswoole/template": "^1.0",
         "smarty/smarty": "^3.1",
         "easyswoole/session": "^1.0",
-        "easyswoole/redis-pool": "^1.0",
+        "easyswoole/redis-pool": "^2.0",
         "easyswoole/atomic-limit": "^1.0",
         "easyswoole/rpc": "^4.0",
         "easyswoole/apollo-config": "^1.0",
         "easyswoole/apollo": "dev-master",
-        "easyswoole/consul": "^1.0"
+        "easyswoole/consul": "^1.0",
+        "aliyunmq/mq-http-sdk": "^1.0",
+        "easyswoole/orm": "^1.0",
+        "54xiake/php-string-tools": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
